# Real-time-Neural-Rendering-of-LiDAR-Point-Clouds

./: .gitattributes  .gitignore  LICENSE  README.md
eval/: checkfolders.py  loss_functions.py  process.py  run.py
example/: CMakeLists.txt
example/render_trajectory/: CMakeLists.txt  main.cpp
model/: export_pt.py  export_ts.py  model.pth.tar  model.py
preprocess/scannetpp/: README.md  requirements.txt
preprocess/scannetpp/common/: scene_release.py
preprocess/scannetpp/iphone/: intrinsic_translation.py  plyToBin.py  poseFile_translation.py  prepare_iphone_data.py  prepare_iphone_data.yml  undistort.py
src/: CMakeLists.txt
src/RTRenderer/: CMakeLists.txt  CameraCalibration.cpp  CameraCalibration.h  Config.h  Frustum.cpp  Frustum.h  Octreegrid.h  RTRenderer.cpp  Utils.cpp  Utils.h  cloudreader.cpp  cloudreader.h  project_cloud.cu  project_cloud.h  tinyply.h
src/RTRenderer/cmake/: RTRendererConfig.cmake.in
src/RTRenderer/include/: CameraCalibration.h  Octreegrid.h  PointCloudReader.h  cloudreader.h  project_cloud.h  render.cuh
src/RTRenderer/src/: CameraCalibration.cpp  PointCloudReader.cpp  cloudreader.cpp  project_cloud.cu  render.cu
src/Synthetic/: CMakeLists.txt  SyntheticGeneration.cpp  Utils.cpp  Utils.h
